# API-Key-SafePass

./: .gitignore  GUIDE.en.html  GUIDE.en.md  GUIDE.html  GUIDE.md  LICENSE  README.en.html  README.en.md  README.html  README.ja.md  README.ko.md  README.md  README.zh.md  TESTING_GUIDE.ko.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.PRD/: 01_PRD.md  02_DATA_MODEL.md  03_PHASES.md  04_PROJECT_SPEC.md  README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src/components/Dashboard/: Dashboard.tsx
src/components/KeyForm/: AccountEntryList.tsx  KeyFormModal.tsx
src/components/KeyList/: KeyList.tsx  QuickUpdateModal.tsx
src/components/Lock/: LockScreen.tsx
src/components/ProjectSidebar/: ProjectSidebar.tsx
src/components/Search/: SearchModal.tsx
src/components/Settings/: ChangePasswordModal.tsx  RegenerateRecoveryModal.tsx  RestoreVaultModal.tsx  SettingsModal.tsx
src/hooks/: useAutoLock.ts  useClipboard.ts  useWindowBlur.ts
src/lib/: providerColors.ts  providers.ts  search.ts  tauri.ts  utils.ts
src/types/: index.ts
